examples/failing/2434.purs
-- @shouldFailWith ErrorParsingModule
module Main where

x :: Char
x = '\x10000'
